// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListItem > business logic > should not render a trailing section with details but no label 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
  </div>
</div>
`;

exports[`ListItem > business logic > should render as a button when the onClick prop is passed 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-subtle-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-subtle-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<button
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
  </div>
</button>
`;

exports[`ListItem > business logic > should render as a link when the href prop is passed 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-subtle-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-subtle-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<a
  class="circuit-0"
  href="https://sumup.com"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
  </div>
</a>
`;

exports[`ListItem > styles > should render a ListItem with a custom details line 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 100%;
  min-height: 1.5rem;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
      <div
        class="circuit-4"
      >
        <p
          class="_base_537b83 _two_537b83"
        >
          Details
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a ListItem with a custom label 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83"
      >
        Label
      </p>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a ListItem with a custom leading component 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-3 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-4 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="_base_0e2caf _danger_0e2caf _circle_0e2caf"
      style="--badge-width: 24px;"
    >
      3
    </div>
  </div>
  <div
    class="circuit-2"
  >
    <div
      class="circuit-3"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-4"
      >
        Label
      </p>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a ListItem with a custom trailing component 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: 16px;
}

.circuit-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
    <div
      class="circuit-4"
    >
      <div
        class="circuit-5"
      >
        <div
          class="_base_0e2caf _promo_0e2caf"
          style="--badge-width: auto;"
        >
          Promo
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a ListItem with a custom trailing label 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: 16px;
}

.circuit-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
    <div
      class="circuit-4"
    >
      <div
        class="circuit-5"
      >
        <strong
          class="_base_537b83 _one_537b83 _highlight_537b83"
        >
          Trailing label
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a ListItem with a details line 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 100%;
  min-height: 1.5rem;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
      <div
        class="circuit-4"
      >
        <p
          class="_base_537b83 _two_537b83 _subtle_537b83"
        >
          Details
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a ListItem with a leading icon 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-3 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-4 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <svg
      fill="none"
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M23 7v1H1V7a3 3 0 0 1 3-3h16a3 3 0 0 1 3 3zm0 3v7a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3v-7h22zm-12 5a1 1 0 0 0-1-1H6a1 1 0 0 0 0 2h4a1 1 0 0 0 1-1z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="circuit-2"
  >
    <div
      class="circuit-3"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-4"
      >
        Label
      </p>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a ListItem with a trailing label 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: 16px;
}

.circuit-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
    <div
      class="circuit-4"
    >
      <div
        class="circuit-5"
      >
        <strong
          class="_base_537b83 _one_537b83 _highlight_537b83"
        >
          Trailing label
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a ListItem with custom trailing details 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: 16px;
}

.circuit-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 100%;
  min-height: 1.5rem;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
    <div
      class="circuit-4"
    >
      <div
        class="circuit-5"
      >
        <strong
          class="_base_537b83 _one_537b83 _highlight_537b83"
        >
          Trailing label
        </strong>
      </div>
      <div
        class="circuit-6"
      >
        <p
          class="_base_537b83 _two_537b83 _subtle_537b83"
        >
          Trailing details
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a ListItem with trailing details 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: 16px;
}

.circuit-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 100%;
  min-height: 1.5rem;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
    <div
      class="circuit-4"
    >
      <div
        class="circuit-5"
      >
        <strong
          class="_base_537b83 _one_537b83 _highlight_537b83"
        >
          Trailing label
        </strong>
      </div>
      <div
        class="circuit-6"
      >
        <p
          class="_base_537b83 _two_537b83 _subtle_537b83"
        >
          Trailing details
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a disabled ListItem 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
  disabled=""
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a navigation variant ListItem 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: 16px;
  margin-right: -4px;
}

.circuit-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
    <div
      class="circuit-4"
    >
      <div
        class="circuit-5"
      >
        <svg
          class="circuit-6"
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 8c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L8.58 8 5.29 4.71A1.013 1.013 0 0 1 5 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render a selected ListItem 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  background-color: var(--cui-bg-accent);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-0:hover,
.circuit-0:active {
  background-color: var(--cui-bg-accent);
}

.circuit-0:after {
  content: '';
  position: absolute;
  top: -2px;
  bottom: -2px;
  left: -2px;
  right: -2px;
  border: 2px solid var(--cui-border-accent);
  border-radius: 16px;
  z-index: 1;
  pointer-events: none;
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
  </div>
</div>
`;

exports[`ListItem > styles > should render the action variant ListItem by default 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Label
      </p>
    </div>
  </div>
</div>
`;
